fixing layout problem

--- a/public/modules/core/css/rememberators.css
+++ b/public/modules/core/css/rememberators.css
@@ -128,6 +128,10 @@
     min-width: 100px;
 }
 
+.standard-min-width {
+    min-width: 200px;
+}
+
 .modal-message {
     padding-bottom: 10px;
     border-bottom: 1px solid #eaeaea;
